tests/language_modules/18_string_templates/valid/std_io_logf_template.vf
module StdIoLogfTemplate

import Std.IO exposing logf

procedure main()
is
    call Std.IO.logf("value=${}", 3)
end main

end StdIoLogfTemplate