tests/language_modules/18_string_templates/invalid_semantics/string_template_old_braces.vf
module StringTemplateOldBraces

procedure main()
is
    let message: String = String.template("id={}", 7)
    check message = "id=7"
end main

end StringTemplateOldBraces